# mail

./: CMakeLists.txt  Mail.cpp  Mail.hpp  Resolver.hpp  dns.cpp  dt.cpp  gmail.cpp  utils.hpp
src/: CMakeLists.txt  Mail.cpp  Mail.hpp  Resolver.cpp  backtrace.hpp  dns.cpp  logger.hpp  main.cpp  utils.cpp
